--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue-app-starter",
+  "name": "my-awesome-app",
   "type": "module",
-  "version": "0.0.0",
+  "private": true,
   "packageManager": "pnpm@8.15.5",
   "description": "A awesome vue web app",
   "scripts": {
